--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @font-face { 
     font-family: disney;
-    src: url('wds011402.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-        url('wds011402.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('../wds011402.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url('../wds011402.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 html {
     background: black;
@@ -9,7 +9,7 @@ html {
 body {
     margin: 0;
     font-family: 'disney' !important;
-    background: url('images/1.jpg');
+    background: url('../images/1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
