--- a/v2/css/style.css
+++ b/v2/css/style.css
@@ -3,6 +3,10 @@
     src: url('../../assets/wds011402.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
         url('../../assets/wds011402.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
+* {
+    touch-action: none;
+}
+
 html,
 body {
   position: fixed;
